src/objects/analyticsadopt__DatasetDetails__c.object
<CustomObject>
    <fields>
        <fullName>analyticsadopt__App_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>App ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>analyticsadopt__App_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>App Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>analyticsadopt__Dataset_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dataset ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>analyticsadopt__Dataset_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dataset Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>analyticsadopt__Dependent_Dashboards__c</fullName>
        <label>Dependent Dashboards</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>abc</fullName>
                </value>
                <value>
                    <fullName>xyz</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>analyticsadopt__Dependent_Lenses__c</fullName>
        <label>Dependent Lenses</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>abc</fullName>
                </value>
                <value>
                    <fullName>xyz</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>analyticsadopt__Last_Accessed_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Accessed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>analyticsadopt__Row_Count__c</fullName>
        <label>Row Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Datasets to Assets Mapping</label>
    <listViews>
        <fullName>analyticsadopt__All</fullName>
        <columns>NAME</columns>
        <columns>analyticsadopt__App_Name__c</columns>
        <columns>analyticsadopt__Dataset_Name__c</columns>
        <columns>analyticsadopt__Dependent_Dashboards__c</columns>
        <columns>analyticsadopt__Dependent_Lenses__c</columns>
        <columns>analyticsadopt__Row_Count__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>DatasetDetails Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Datasets to Assets Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>